# fcpp

./: .bazelrc  .gitignore  .travis.yml  CMakeLists.txt  COPYING.txt  Doxyfile  README.md  VERSION.txt  Vagrantfile  WORKSPACE  build_all.sh  cmakeHowTo.txt  hVAO[(int)vertex::star]);  make.sh
.github/action-test/: Dockerfile  action.yml
.github/workflows/: Dockerfile  entrypoint.sh  main.yml
lib/: BUILD  coordination.hpp  fcpp.hpp  settings.hpp  simulation.cpp  simulation.hpp
lib/common/: BUILD  aggregator.hpp  algorithm.cpp  array.cpp  (+17 more)
src/: .bazelrc  .persistence  CMakeHowTo.md  CMakeLists.txt  Dockerfile  Doxyfile  Vagrantfile  WORKSPACE  fcpp.pc.in  fcpp_master.pc.in  gtest.BUILD  make.sh  stb_image.BUILD
src/extras/docs/: doxymake.py  node_net.md
src/extras/experiments/: README.md  hash_designer.cpp  immutable_vs_unordered.cpp  set_vs_queue.cpp
src/extras/plotter/: README.md  plot.asy  plot_builder.py
src/lib/: BUILD  beautify.cpp  beautify.hpp  cloud.cpp  cloud.hpp  common.cpp  common.hpp  component.cpp  component.hpp  coordination.cpp  coordination.hpp  data.cpp  data.hpp  deployment.cpp  deployment.hpp  fcpp.cpp  fcpp.hpp  internal.cpp  internal.hpp  option.cpp  option.hpp  settings.cpp  settings.hpp  simulation.cpp  simulation.hpp
src/lib/cloud/: BUILD  graph_connector.cpp  graph_connector.hpp  graph_spawner.cpp  graph_spawner.hpp
src/lib/common/: BUILD  aggregator.cpp  aggregator.hpp  algorithm.cpp  algorithm.hpp  array.hpp  distribution.cpp  distribution.hpp  flat_ptr.cpp  immutable_map.cpp  immutable_map.hpp  multitype_map.cpp  multitype_map.hpp  mutex.cpp  mutex.hpp  number_sequence.cpp  number_sequence.hpp  option.cpp  option.hpp  ostream.cpp  ostream.hpp  plot.cpp  plot.hpp  profiler.cpp  profiler.hpp  quaternion.cpp  quaternion.hpp  random_access_map.cpp  random_access_map.hpp  sequence.cpp  sequence.hpp  serialize.cpp  serialize.hpp  tagged_tuple.cpp  tagged_tuple.hpp  traits.cpp  traits.hpp  twin.cpp  twin.hpp  type_sequence.cpp  (+1 more)
src/lib/component/: BUILD  base.cpp  base.hpp  calculus.cpp  calculus.hpp  exporter.hpp  identifier.cpp  identifier.hpp  logger.cpp  logger.hpp  randomizer.cpp  randomizer.hpp  scheduler.cpp  scheduler.hpp  storage.cpp  storage.hpp  timer.cpp  timer.hpp
src/lib/coordination/: BUILD  basics.cpp  basics.hpp  collection.cpp  collection.hpp  election.cpp  election.hpp  geometry.cpp  geometry.hpp  spreading.cpp  spreading.hpp  time.cpp  time.hpp  utils.cpp  utils.hpp
src/lib/data/: BUILD  bloom.cpp  bloom.hpp  color.cpp  color.hpp  context.cpp  context.hpp  field.cpp  field.hpp  hyperloglog.cpp  hyperloglog.hpp  ordered.cpp  ordered.hpp  shape.cpp  shape.hpp  trace.cpp  trace.hpp  tuple.cpp  tuple.hpp  vec.cpp  vec.hpp
src/lib/deployment/: BUILD  hardware_connector.cpp  hardware_connector.hpp  hardware_identifier.cpp  hardware_identifier.hpp  hardware_logger.cpp  hardware_logger.hpp  os.cpp  os.hpp  persister.cpp  persister.hpp
src/lib/graphics/: camera.cpp  camera.h  camera.hpp  input_types.hpp  renderer.cpp  renderer.h  renderer.hpp  shader.cpp  shader.h  shader.hpp  shapes.cpp  shapes.h  shapes.hpp
src/lib/graphics/fonts/fixed_v03/: readme.txt
src/lib/graphics/fonts/hack/: readme.txt
src/lib/graphics/shaders/: fragment.glsl  fragment_col.glsl  fragment_diff.glsl  fragment_font.glsl  fragment_label.glsl  fragment_texture.glsl  vertex.glsl  vertex_col.glsl  vertex_diff.glsl  vertex_font.glsl  vertex_label.glsl  vertex_ortho.glsl  vertex_texture.glsl
src/lib/internal/: BUILD  context.cpp  context.hpp  flat_ptr.cpp  flat_ptr.hpp  trace.cpp  trace.hpp  twin.cpp  twin.hpp
src/lib/option/: BUILD  aggregator.cpp  aggregator.hpp  connect.cpp  connect.hpp  distribution.cpp  distribution.hpp  filter.cpp  filter.hpp  functor.cpp  functor.hpp  metric.cpp  metric.hpp  sequence.cpp  sequence.hpp
src/lib/simulation/: BUILD  batch.cpp  batch.hpp  camera.cpp  camera.h  displayer.cpp  displayer.hpp  physical_connector.hpp  physical_position.hpp  shader.cpp  shader.h  simulated_connector.cpp  simulated_connector.hpp  simulated_map.cpp  simulated_map.hpp  simulated_positioner.cpp  simulated_positioner.hpp  spawner.cpp  spawner.hpp
src/lib/simulation/shaders/: fragment.glsl  fragment_col.glsl  vertex.glsl  vertex_col.glsl
src/project/sample/: BUILD  collection_compare.cpp  collection_compare.hpp  runner.cpp  slowdistance.cpp  slowdistance.hpp  slowdistancetest.cpp  tester.cpp
src/project/tests/: BUILD  binary.cpp  library.cpp  library.hpp  test.cpp
src/test/: BUILD  fake_os.cpp  fake_os.hpp  helper.cpp  helper.hpp  test_net.cpp  test_net.hpp
src/test/cloud/: BUILD  graph_connector.cpp  graph_spawner.cpp  index
src/test/common/: BUILD  aggregator.cpp  algorithm.cpp  array.cpp  distribution.cpp  flat_ptr.cpp  immutable_map.cpp  multitype_map.cpp  mutex.cpp  number_sequence.cpp  option.cpp  ostream.cpp  plot.cpp  profiler.cpp  quaternion.cpp  random_access_map.cpp  sequence.cpp  serialize.cpp  tagged_tuple.cpp  traits.cpp  twin.cpp  type_sequence.cpp
src/test/component/: BUILD  base.cpp  calculus.cpp  exporter.cpp  identifier.cpp  logger.cpp  randomizer.cpp  scheduler.cpp  storage.cpp  timer.cpp
src/test/coordination/: BUILD  basics.cpp  collection.cpp  election.cpp  geometry.cpp  spreading.cpp  time.cpp  utils.cpp
src/test/data/: BUILD  bloom.cpp  color.cpp  context.cpp  field.cpp  hyperloglog.cpp  ordered.cpp  trace.cpp  tuple.cpp  vec.cpp
src/test/deployment/: BUILD  hardware_connector.cpp  hardware_identifier.cpp  hardware_logger.cpp  persister.cpp
src/test/general/: BUILD  collection_compare.cpp  collection_compare.hpp  embedded.cpp  slow_distance.cpp  slow_distance.hpp  slowdistance.cpp  slowdistance.hpp
src/test/internal/: BUILD  context.cpp  flat_ptr.cpp  trace.cpp  twin.cpp
src/test/option/: BUILD  aggregator.cpp  connect.cpp  distribution.cpp  filter.cpp  functor.cpp  metric.cpp  sequence.cpp
src/test/simulation/: BUILD  batch.cpp  displayer.cpp  physical_connector.cpp  physical_position.cpp  simulated_connector.cpp  simulated_map.cpp  simulated_positioner.cpp  spawner.cpp
tools/: bazel.rc
(+125 files in other folders)
